Navigation bar & Footer standardized

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
-<!-- carousel-template -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<!-- <link rel="icon" href="../../../../favicon.ico"> -->
+	<meta name="description" content="Computer Society of India, GITAM Student Branch.">
+	<link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png"><link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png"><link rel="icon" type="image/png" sizes="192x192"  href="assets/favicon/android-icon-192x192.png"><link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png"><link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png"><link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="msapplication-TileColor" content="#ffffff"><meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 
-	<title>Carousel Template for Bootstrap</title>
+	<title>CSI | Computer Society of India | GITAM Student Branch</title>
 
-	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-	<!-- Custom styles for this template -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 
 	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-			<a class="navbar-brand" href="#">Carousel</a>
+		<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+			<a class="navbar-brand" href="index.html">
+				<img src="assets/brand/logo-csi.jpg" width="40" height="40" class="d-inline-block align-top" alt=""> <span class="logo-title">CSI</span> </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -30,22 +27,34 @@
 						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link" href="events.html">Events</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Disabled</a>
+						<a class="nav-link" href="gallery.html">Gallery</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="team.html">Team</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
 				</ul>
-				<form class="form-inline mt-2 mt-md-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
+				<ul class="nav navbar-nav ml-auto social-icons">
+					<li>
+						<a href="https://www.facebook.com/gitamcsi/" target="_blank" class="nav-link"><i class="fa fa-facebook fa-lg"></i></a>
+					</li>
+					<li>
+						<a href="https://www.instagram.com/csi_gitam/" target="_blank" class="nav-link"><i class="fa fa-instagram fa-lg"></i></a>
+					</li>
+					<li>
+						<a href="https://www.youtube.com/channel/UC3WGSLJhICY8pheX9GBikJg" target="_blank" class="nav-link"><i class="fa fa-youtube fa-lg"></i></a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 	</header>
 
-	<main role="main">
-
+	<div role="main">
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -57,29 +66,28 @@
 					<img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
 					<div class="container">
 						<div class="carousel-caption text-left">
-							<h1>Example headline.</h1>
+							<h1>We are Team CSI</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+							<p><a class="btn btn-lg btn-primary" href="team.html" role="button">Meet the Team</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
 					<div class="container">
-						<div class="carousel-caption">
-							<h1>Another example headline.</h1>
+						<div class="carousel-caption text-left">
+							<h1>Registrations are open!</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+							<p><a class="btn btn-lg btn-primary" href="https://goo.gl/forms/TKuc48HXetFKtKKPl1" target="_blank" role="button">Register Now</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="carousel-item">
 					<img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
 					<div class="container">
-						<div class="carousel-caption text-right">
-							<h1>One more for good measure.</h1>
+						<div class="carousel-caption text-left">
+							<h1>Awarded "Most Active President"</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
 						</div>
 					</div>
 				</div>
@@ -93,101 +101,89 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
+		<div class="container marketing">
+			<div class="row">
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h2>Heading</h2>
+					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h2>Heading</h2>
+					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				</div><!-- /.col-lg-4 -->
+				<div class="col-lg-4">
+					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+					<h2>Heading</h2>
+					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				</div>
+			</div>
 
+			<hr class="featurette-divider">
 
-      <!-- Marketing messaging and featurettes
-      	================================================== -->
-      	<!-- Wrap the rest of the page in another container to center all the content. -->
+			<div class="row featurette">
+				<div class="col-md-7">
+					<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+				</div>
+				<div class="col-md-5">
+					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				</div>
+			</div>
 
-      	<div class="container marketing">
+			<hr class="featurette-divider">
 
-      		<!-- Three columns of text below the carousel -->
-      		<div class="row">
-      			<div class="col-lg-4">
-      				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-      				<h2>Heading</h2>
-      				<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-      				<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      			</div><!-- /.col-lg-4 -->
-      			<div class="col-lg-4">
-      				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-      				<h2>Heading</h2>
-      				<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-      				<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      			</div><!-- /.col-lg-4 -->
-      			<div class="col-lg-4">
-      				<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-      				<h2>Heading</h2>
-      				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      				<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      			</div><!-- /.col-lg-4 -->
-      		</div><!-- /.row -->
+			<div class="row featurette">
+				<div class="col-md-7 order-md-2">
+					<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+				</div>
+				<div class="col-md-5 order-md-1">
+					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				</div>
+			</div>
 
+			<hr class="featurette-divider">
 
-      		<!-- START THE FEATURETTES -->
+			<div class="row featurette">
+				<div class="col-md-12">
+					<h2 class="featurette-heading">Got some questions? <span class="text-muted">Get in touch.</span></h2>
+					<br>
+					<table class="table table-hover table-borderless">
+						<tbody>
+							<tr>
+								<td>Aditya</td>
+								<td><a href="tel:+919542196003">+91 95421 96003</a></td>
+							</tr>
+							<tr>
+								<td>Ajit</td>
+								<td><a href="tel:+918895567749">+91 88955 67749</a></td>
+							</tr>
+							<tr>
+								<td>Harshitha</td>
+								<td><a href="tel:+918186849922">+91 81868 49922</a></td>
+							</tr>
+							<tr>
+								<td>Laasya</td>
+								<td><a href="tel:+917285934496">+91 72859 34496</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<hr class="featurette-divider">
+		</div>
 
-      		<hr class="featurette-divider">
-
-      		<div class="row featurette">
-      			<div class="col-md-7">
-      				<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-      				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      			</div>
-      			<div class="col-md-5">
-      				<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-      			</div>
-      		</div>
-
-      		<hr class="featurette-divider">
-
-      		<div class="row featurette">
-      			<div class="col-md-7 order-md-2">
-      				<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-      				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      			</div>
-      			<div class="col-md-5 order-md-1">
-      				<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-      			</div>
-      		</div>
-
-      		<hr class="featurette-divider">
-
-      		<div class="row featurette">
-      			<div class="col-md-7">
-      				<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-      				<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      			</div>
-      			<div class="col-md-5">
-      				<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-      			</div>
-      		</div>
-
-      		<hr class="featurette-divider">
-
-      		<!-- /END THE FEATURETTES -->
-
-      	</div><!-- /.container -->
-
-
-      	<!-- FOOTER -->
-      	<footer class="container">
-      		<p class="float-right"><a href="#">Back to top</a></p>
-      		<p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      	</footer>
-      </main>
-
-    <!-- Bootstrap core JavaScript
-    	================================================== -->
-    	<!-- Placed at the end of the document so the pages load faster -->
-    	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-    	<!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
-    	<!-- <script src="../../assets/js/vendor/popper.min.js"></script> -->
-    	<!-- <script src="../../dist/js/bootstrap.min.js"></script> -->
-    	<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    	<!-- <script src="../../assets/js/vendor/holder.min.js"></script> -->
-    	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
-    </body>
-    </html>
+		<footer class="container">
+			<p>&copy; 2018-19 &mdash; Team CSI, GITAM Student Branch &middot; <a href="credits.html">Credits</a> &middot; <a href="http://gitam.edu/in-campus/csi" target="_blank">CSI-GIT</a></p>
+		</footer>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+</body>
+</html>
