Cleared up extra sections

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 				</div>
 			</div>
 
-			<hr class="featurette-divider">
+			<!-- <hr class="featurette-divider">
 
 			<div class="row featurette">
 				<div class="col-md-7">
@@ -109,7 +109,7 @@
 				<div class="col-md-5 order-md-1">
 					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
 				</div>
-			</div>
+			</div> -->
 
 			<hr class="featurette-divider">
 
