--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 
-			<hr class="featurette-divider">
+			<!-- <hr class="featurette-divider">
 
 			<div class="row featurette">
 				<div class="col-md-7">
@@ -146,7 +146,7 @@
 					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
 				</div>
 			</div>
-
+ -->
 			<hr class="featurette-divider">
 
 			<div class="row featurette">
