--- a/credits.html
+++ b/credits.html
@@ -56,11 +56,10 @@
 
 	<div role="main">
 
-		<div class="jumbotron">
+		<div class="jumbotron j-credits">
 			<div class="container">
 				<h1 class="display-3">Credits</h1>
-				<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-				<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+				<p>This little hall of fame exists to acknowledge the people behind this website.</p>
 			</div>
 		</div>
 
@@ -68,22 +67,22 @@
 		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+					<h2>Naveen Malla</h2>
+					<p>Web Master</p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:naveenmalla007@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/naveen-malla/" target="_blank" role="button">LinkedIn &raquo;</a></p>
 				</div>
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-				</div><!-- /.col-lg-4 -->
+					<h2>Aditya Chattopadhyay</h2>
+					<p>Web Developer, Graphic Designer</p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:adityasa99@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/AdityaSA99/" target="_blank" role="button">LinkedIn &raquo;</a></p>
+				</div>
 				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+					<h2>Ajit Panigrahi</h2>
+					<p>Web Developer, Content Writer</p>
+					<p><a class="btn btn-danger btn-lg" style="float: left; display: inline;" href="mailto:ajitzero@gmail.com" target="_blank" role="button">E-Mail &raquo;</a></p>
+					<p><a class="btn btn-info btn-lg" style="float: right; display: inline;" href="https://www.linkedin.com/in/AjitZero/" target="_blank" role="button">LinkedIn &raquo;</a></p>
 				</div>
 			</div>
 
