Finalized Events page

--- a/events.html
+++ b/events.html
@@ -56,60 +56,169 @@
 
 	<div role="main">
 
-		<div class="jumbotron">
+		<div class="jumbotron j-events">
 			<div class="container">
 				<h1 class="display-3">Events</h1>
-				<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-				<!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+				<p>We've successfully organised and hosted 14+ seminars, workshops &amp; fests last year and we intend to go <em>beyond</em> this time around!</p>
 			</div>
 		</div>
 
 
 		<div class="container marketing">
 			<div class="row">
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/2017-11-19 Distributed Computing.png" class="img-fluid">
 				</div>
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-				</div><!-- /.col-lg-4 -->
-				<div class="col-lg-4">
-					<img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-					<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-				</div>
-			</div>
-
-			<!-- <hr class="featurette-divider">
-
-			<div class="row featurette">
-				<div class="col-md-7">
-					<h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-				</div>
-				<div class="col-md-5">
-					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				<div class="col-lg-5">
+					<h2>Distributed Computing</h2>
+					<p>A seminar on "Distributed Computing" was held on 19<sup>th</sup> December, 2017, where the featured speaker was Shri. Sumanth Pasupuleti, Senior Software Engineer, Netflix, California. He highlighted the importance of programming as CSE undergraduates and stressed on the value of time. He encouraged everyone to get started with Cassandra and Open Source Software Development and concluded with an interactive question and answer session.</p>
+					<p><strong>Participation:</strong> 150+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Seminar on Distributed Computing.pdf" target="_blank" role="button">View details &raquo;</a></p>
 				</div>
 			</div>
 
 			<hr class="featurette-divider">
 
-			<div class="row featurette">
-				<div class="col-md-7 order-md-2">
-					<h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-					<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>VR &amp; AR</h2>
+					<p>A workshop on IoT was held on November 25<sup>th</sup>, 2017 as a part of the CSI APSC 2017. The featured speaker for this event was Smt. Kavya, Director, iB Hubs, Bangalore. She helped everyone understand the intricacies of VR and AR in an interactive session where all the students were given a chance to experience Virtual Reality using a VR Box which they had brought along.</p>
+					<p><strong>Participation:</strong> 180+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Virtual Reality and Augumented Reality.pdf" target="_blank" role="button">View details &raquo;</a></p>
 				</div>
-				<div class="col-md-5 order-md-1">
-					<img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2017-11-25 VR AR.png" class="img-fluid">
 				</div>
-			</div> -->
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/2017-11-24 Internet of Things.png" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>Internet of Things</h2>
+					<p>An IOT Workshop was held on November 25<sup>th</sup>, 2017, as a part of the CSI APSC 2017. The featured speaker for the workshop was Shri Manikanta Gupta is Project Manager - IoT, iB Hubs. He introduced the emerging world of Internet of Things and the career options that arise with it. He explained the basics of IoT and had an interactive session showing the practicalities of IoT, encouraging everyone to be "makers".</p>
+					<p><strong>Participation:</strong> 180+ students</p>
+					<p><a class="btn btn-success" href="assets/report/IOT workshop.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Cyber Security</h2>
+					<p>A workshop on "Cyber Security" was held on November 24<sup>th</sup>, 2017, as a part of the CSI APSC 2017. The featured speaker for the workshop was Shri Venkata Abhinava Devaguptapu, Project Manager - Cyber Security, iB Hubs, Hyderabad. He spoke about the impact of hacking in cyber warfare, displayed several techniques commonly used in it and how to secure yourself against them.</p>
+					<p><strong>Participation:</strong> 200+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Cyber Security Workshop.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2017-11-24 Cyber Security.png" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/2017-11-24 APSC.png" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>CSI Andhra Pradesh Student Convention 2017-18</h2>
+					<p><strong>Theme: </strong>"Rising India &mdash; A Step towards Digitalization"</p>
+					<p class="text-justify">The CSI APSC 2017-18 was hosted at GITAM, Visakhapatnam on 24<sup>th</sup> and 25<sup>th</sup> November, 2017. Over the two days a diverse variety of events took place for the convention such as Code Savvy, Quiztal Maze, Paper presentation, etc. and workshops on Cyber Security, IoT, VR & AR.</p>
+					<p><strong>Participation:</strong> 550+ students</p>
+					<p><a class="btn btn-success" href="http://www.gitam.edu/csiconvention/" target="_blank" role="button">Visit website &raquo;</a></p>
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Digithon</h2>
+					<p>A walk–a–thon titled "Digi-Thon" was organised at Rama Krishna Beach Road on Nov 21<sup>st</sup>, 2017, to bring awareness about Digitalization in India. The Principal and Dean, GIT, Prof. K. Lakshmi Prasad has flagged off the event. The event witnessed an active participation of over 80 students in order to raise awareness about Digitalization as a part of the Andhra Pradesh State Student Convention by CSI GITAM Student Branch.</p>
+					<p><strong>Participation:</strong> 80+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Digithon.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2017-02-05 Walk-a-thon.png" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/Blockchain.png" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>Blockchain Technology</h2>
+					<p>A two-day workshop on "Blockchain Technology" was given by Shri Opinder Preet Singh, Head, ETHLend, India Ltd., an expert in the area of Ethereum blockchain and digital currency. The concept of rising bitcoin usage was beautifully portrayed and addressed by the speaker. The speaker explained various problems in economy and banking structure leading to the need for digital currencies, and showed how it can be utilised by diverse companies in their work. </p>
+					<p><strong>Participation:</strong> 100+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Workshop on Blockchain.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Android App Development using IoT and Integrated Embedded Systems</h2>
+					<p>On 18<sup>th</sup> September, 2017, the workshop on "Android App Development using IoT and Integrated Embedded Systems" took place. Mr. Srikanth, Director &amp; national Head, Academy of Robotics, spoke about the world of startups and entrepreneurship and went on to delve into the idea of entrepreneurship with the help of programming, proper administration and software.</p>
+					<p><strong>Participation:</strong> 330+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Workshop on Android development.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2018-09-18 Android App Dev Workshop.png" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/Digital Transformation.png" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>Digital Transformation</h2>
+					<p>The seminar was given by Mr. P Saravanan, Delivery Head, NIIT Ltd. Mr. Saravanan garu gave the students an impeccable seminar on the constant change that occurs in the life of an engineering graduate and pointed out how digitalization has completely transformed the world into a better place. The seminar aimed to have everyone properly utilize their own potential and to make the world a better digitized platform.</p>
+					<p><strong>Participation:</strong> 150+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Seminar on Digital Transformation.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<h2>Swachh Bharat Drive</h2>
+					<p>In association with NSS, GITAM wing, "Swachh Bharat Drive" was organized by CSI Student Branch at Tenneti Park, Visakhapatnam, on 12<sup>th</sup> March, 2017. Activities/events like these raise the disciplinary sense in students and also helps them for contributing to community service. They would, in this way, come to know about the society and the amount of cleanliness that is needed for our surroundings. The volunteers diligently worked with enthusiasm during the event.</p>
+					<p><strong>Participation:</strong> 80+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Swachh Bharat Drive.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+				<div class="col-lg-5">
+					<img src="assets/events/2017-18/2017-03-12 Swachh Bharat Drive.png" class="img-fluid">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row">
+				<div class="col-lg-5 offset-lg-1">
+					<img src="assets/events/2017-18/2017-02-13 Praudyogiki.png" class="img-fluid">
+				</div>
+				<div class="col-lg-5">
+					<h2>Praudyogiki 2k17</h2>
+					<p>CSI conducts fests every year in the month of February and as such, in the year 2017, a fest named "Praudyogiki 2k17" was conducted on 13th February. The students participated in the various technical and non-technical events that were organised, such as Folder Locks, Snake & Ladder, Code Marathon, Clash Of Codes, Link Arts, Teens To Toons, Crypt Ur Minds, Get The Best Twist, Piko-Taro and workshops on .NET & Cloud Computing. </p>
+					<p><strong>Participation:</strong> 650+ students</p>
+					<p><a class="btn btn-success" href="assets/report/Praudyogiki.pdf" target="_blank" role="button">View details &raquo;</a></p>
+				</div>
+			</div>
+
+			<!-- done so far -->
 
 			<hr class="featurette-divider">
 
